samples/_failures_safe/1761358464_a7f4f5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dde03b78.c: In function ‘main’:
./samples/SAFE/__tmp_dde03b78.c:163:22: error: expected ‘)’ at end of input
  163 |         if (!add_edge
      |            ~         ^
      |                      )
./samples/SAFE/__tmp_dde03b78.c:163:9: error: expected declaration or statement at end of input
  163 |         if (!add_edge
      |         ^~
./samples/SAFE/__tmp_dde03b78.c:163:9: error: expected declaration or statement at end of input
